solc_mutator_ossfuzz_seed_corpus/test_sol/test_11e56073cdc8df25ffc9d943588e35587bd80fdde1a0af71a77c84c6393c0d75_914097a8735623ed4b57b4ba9e94ad5e359e40d5_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  int8 s0;
  constructor(int8 i0)  {





  }
}

==== Source: su1.sol ====
import "su0.sol";
contract C1 is C0 {
  bytes15 s1;
  uint72 s2;
  constructor(int8 i0,int8 i1,bytes15 i2,uint72 i3) C0((~(int8(-65)) + ~(s0--)), i1, (abi.decode("4bb99c7b9a8414dc71de47fa2b9f5f26040dbd5834935f742c938d3a3916d0ce", (bytes15)) | abi.decode(abi.decode(bytes.concat(bytes14(0x342cfd1c9dc420d7e455b50ed99a), abi.decode(abi.encodePacked(uint152(type(uint152).max), int24(int24(3177698)), int152(int152(65007404559587932961347639908534637908935096)), uint216(((uint216((((uint216((uint216(77746774605167877968233204718706531879098282703682890607972023744) / ((uint216(((~(uint216(53278852745430322468189915204242959856969631382001573091848559678)) * uint216(25576202613038897291443467944995350350563602074418439565805224938)) / uint216(25785310695086671262905473150895524933674732438538054632967893190))) >> uint216(27841037092811136642032377272618061445672750894233057298709400332)) & uint216(40987492106967695756508758837591786324764491208317898667601035625)))) + uint216(81277401225376018921133028963859852359099214439384218285232007606)) * uint216(90826989376742328376483772322844648745271299396630188747115481355)) / uint216(39759139372266738779670327967222514814332024611343494507293846969))) >> uint216(53318298051479879116220951295555908111050900699266245610323002792)) << uint216(81479881789129953048030073073711298705778338960731782302000199506)))), (bytes28)), bytes9(0x27a931bf56c6380108)), (address)).code, (bytes15))), uint72(1777929028323628128312))
  { }
  function f0(bytes20 i0,bytes3 i1,bytes4 i2,uint56 i3) external returns(bytes15 o0,bytes22 o1)
  { }
  function f1() external returns(int240 o0)
  {
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 2973: (su1.sol:117-1473): Wrong argument count for modifier invocation: 4 arguments given but expected 1.
